加密方法修改为BASE64Decoder