@@ -7,7 +7,11 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESedeKeySpec;
 import javax.crypto.spec.IvParameterSpec;
 
-import com.sun.org.apache.xerces.internal.impl.dv.util.Base64;
+
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
+
+
 
 public class Des3Util {
 
@@ -36,7 +40,8 @@ public class Des3Util {
 		IvParameterSpec ips = new IvParameterSpec(iv.getBytes());
 		cipher.init(Cipher.ENCRYPT_MODE, deskey, ips);
 		byte[] encryptData = cipher.doFinal(plainText.getBytes(encoding));
-		return Base64.encode(encryptData);
+//		return Base64.encode(encryptData);
+		return new BASE64Encoder().encode(encryptData);
 	}
 
 	/**
@@ -56,13 +61,17 @@ public class Des3Util {
 		IvParameterSpec ips = new IvParameterSpec(iv.getBytes());
 		cipher.init(Cipher.DECRYPT_MODE, deskey, ips);
 
-		byte[] decryptData = cipher.doFinal(Base64.decode(encryptText));
-
-		return new String(decryptData, encoding);
+//		byte[] b_ = Base64.decode(encryptText);
+		byte[] b_ = new BASE64Decoder().decodeBuffer(encryptText);
+		if(null != b_){
+			byte[] decryptData = cipher.doFinal(b_);
+			return new String(decryptData, encoding);
+		}
+		return null;
 	}
 
 	public static void main(String args[]) throws Exception {
-		String str = "{\"deviceId\":\"79802537\",\"deviceType\":\"ios\",\"cityLcode\":\"320400\",\"version\":\"1.0.0\",\"clientTime\":\"147987314\",\"phone\":\"15312584242\",\"password\":\"123456\"}";
+		String str = "{\"deviceId\":\"79802537\",\"deviceType\":\"ios\",\"cityLcode\":\"320400\",\"version\":\"1.0.0\",\"clientTime\":\"147987314\",\"phone\":\"15312584242\"}";
 		System.out.println("----加密前-----：" + str);
 		
 		String encodeStr = Des3Util.encode(str);
